# 1jam-choices

./: .gitmodules  CMakeLists.txt  README.md
game/: CMakeLists.txt  credits.md  game_config.cpp  game_config.h  main.cpp
game/assets/models/: ships.fbx
game/assets/shaders/: default.frag  default.vert  text.frag
game/components/: enemy_controller.cpp  enemy_controller.h  game_controller.cpp  game_controller.h  init_game.cpp  init_game.h  main_menu_controller.cpp  main_menu_controller.h  player_controller.cpp  player_controller.h  projectile_controller.cpp  projectile_controller.h  rotate_around.cpp  rotate_around.h
game/data/: static_data.h
game/scenes/: game_scene.cpp  game_scene.h  init_scene.cpp  init_scene.h  main_menu_scene.cpp  main_menu_scene.h
sourceAssets/: shipmodels.blend  shipmodels.blend1
